# Videogame_store

./: .gitignore  Progetto di Advanced Programming Languages.docx  README.md  test
backend/: CMakeLists.txt  main.cpp
backend/config/: config.ini
backend/database/: MongoDB.cpp  MongoDB.h
backend/database_test_NO/: database.cpp  database.h
backend/exceptions/: CreateGameException.h  CreateReservationException.h  CreateReviewException.h  GetGameException.h  GetRecommendationsException.h  HandlerException.h  LoginException.h  PurchaseException.h  ReservationException.h  ReviewException.h  SignupException.h  SocketException.h  TokenException.h  UploadException.h  UserNotFoundException.h
backend/handler/: handler.cpp  handler.h
backend/handler_NO/: Handler.cpp
backend/server/: server.h
backend/serverTcp_NO/: ServerTcp.cpp  ServerTcp.h
backend/server_NO/: server.cpp
backend/socketTcp/: SocketTcp.cpp  SocketTcp.h
collections/: videogame_store.games.json  videogame_store.users.json
docs/: README.md
go/: Client.go  DTO.go  Handler.go  Main.go  Webhook.go  config.ini  database.go  go.mod  go.sum  notifications.db
python/: app.py  config.ini
python/database/: database.py
python/static/css/: style.css  style_test.css
python/templates/: Test_home.html  base.html  cart.html  checkout.html  create_game.html  game.html  home.html  login.html  notifications.html  purchases.html  reviews.html  signup.html  update_game.html
